// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`model instanciate 1`] = `
Model {
  "data": Object {
    "age": 16,
    "date": undefined,
    "list": Array [],
    "name": "fghkkk",
    "point": false,
  },
  "errors": Array [
    Object {
      "data": Array [],
      "dataPath": ".list",
      "keyword": "type",
      "message": "should be array",
      "params": Object {
        "type": "array",
      },
      "parentSchema": Object {
        "type": "array",
      },
      "schema": "array",
      "schemaPath": "#/properties/list/type",
    },
  ],
  "handleChange": [Function],
  "schema": Object {
    "$schema": "http://json-schema.org/schema#",
    "description": "teste",
    "id": "ClassDecoratorExample",
    "properties": Object {
      "age": Object {
        "default": 16,
        "type": "number",
      },
      "ages": Object {
        "maximum": 23,
        "type": "number",
      },
      "date": Object {
        "format": "date",
        "type": "string",
      },
      "list": Object {
        "type": "array",
      },
      "name": Object {
        "default": "fghkkk",
        "title": "Name",
        "type": "string",
      },
    },
    "required": Array [
      "name",
    ],
    "title": "ClassDecoratorExample",
    "type": "object",
  },
  "validate": [Function],
}
`;

exports[`static decorator static 1`] = `
Object {
  "$schema": "http://json-schema.org/schema#",
  "description": "teste",
  "id": "ClassDecoratorExample",
  "properties": Object {
    "age": Object {
      "default": 16,
      "type": "number",
    },
    "ages": Object {
      "maximum": 23,
      "type": "number",
    },
    "date": Object {
      "format": "date",
      "type": "string",
    },
    "list": Object {
      "type": "array",
    },
    "name": Object {
      "default": "fghkkk",
      "title": "Name",
      "type": "string",
    },
  },
  "required": Array [
    "name",
  ],
  "title": "ClassDecoratorExample",
  "type": "object",
}
`;
